# trelane

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SLICE-3-C7-spec.md  build.txt  demo-rust.sh  demo.sh  install.sh  pump.py  stub_agent.py  swarmctl.py  test.txt
.trelane/: .gitignore  trelane.db
.trelane/prompts/: bootstrap.md
.trelane/traces/: ephemeral.jsonl
docs/: biplane-describe-protocol.json  implementation-chronicle.json  spec-compliance-audit-2026-07-03.json  terminal-relaunch.md  trelane-slice0-handoff.json
prompts/: bootstrap.md
src/: bench.rs  bench_ui.rs  biplane.rs  biplane_ui.rs  cli.rs  commands.rs  config_fields.rs  crypto.rs  db.rs  di.rs  diagnostic.rs  domain.rs  entropy.rs  error.rs  lib.rs  logo.rs  main.rs  models.rs  monitor.rs  prompt.rs  prop.rs  pump.rs  refine.rs  retention.rs  splash.rs  squire.rs  store.rs  telemetry.rs  testing.rs  text_input.rs  tui_session.rs
src/rules/: trelane-message-protocol.schema.json  validate_tmp.py
src/rules/for_agents/: README.md  TRELANE-MESSAGE-PROTOCOL.md  TRELANE-PROTOCOL.md
tests/: full-usage-scenario-interactive.json  full-usage-scenario.json  full-usage-scenario.report.jsonl  large.json  medium.json  small.json  space_rogue.bench.json  space_rogue.describe.json  space_rogue.scenario.json
