[package]
name = "trelane"
version = "0.3.1"
edition = "2024"
description = "Squire-based multi-agent coordination protocol"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
hmac = "0.13"
sha2 = "0.11"
digest = "0.11"
globset = "0.4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
libc = "0.2"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
unicode-segmentation = "1.12"

[dev-dependencies]
tempfile = "3"
